--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ edit_uri: tree/master/docs
 repo_name: 'Jako/CrossContextsSettings'
 repo_url: https://github.com/Jako/CrossContextsSettings
 
-copyright: '&copy; 2014-2020 <a href="https://github.com/virtudraft">Virtudraft</a>, 2021 <a href="https://treehillstudio.com">Treehill Studio</a>'
+copyright: '&copy; 2014-2020 <a href="https://github.com/virtudraft">Virtudraft</a>, 2021-2024 <a href="https://treehillstudio.com">Treehill Studio</a>'
 
 nav:
 - Description: 'index.md'
